@@ -3,19 +3,29 @@ package com.unimelb.comp30022.itproject;
 import android.app.DialogFragment;
 import android.content.BroadcastReceiver;
 import android.content.Context;
+import android.content.DialogInterface;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.location.Location;
+import android.net.Uri;
 import android.os.Bundle;
 import android.os.Handler;
+import android.provider.MediaStore;
 import android.support.annotation.NonNull;
+import android.support.v7.app.AlertDialog;
 import android.support.v7.app.AppCompatActivity;
+import android.text.Editable;
+import android.text.TextWatcher;
 import android.util.Log;
 import android.view.View;
+import android.view.WindowManager;
 import android.widget.ArrayAdapter;
 import android.widget.Button;
 import android.widget.EditText;
+import android.widget.ImageButton;
+import android.widget.ImageView;
 import android.widget.ListView;
+import android.widget.ProgressBar;
 import android.widget.RadioButton;
 import android.widget.SeekBar;
 import android.widget.TextView;
@@ -23,6 +33,8 @@ import android.widget.Toast;
 
 import com.firebase.geofire.GeoFire;
 import com.firebase.geofire.GeoLocation;
+import com.google.android.gms.tasks.OnFailureListener;
+import com.google.android.gms.tasks.OnSuccessListener;
 import com.google.firebase.FirebaseApp;
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseUser;
@@ -32,17 +44,27 @@ import com.google.firebase.database.DatabaseReference;
 import com.google.firebase.database.FirebaseDatabase;
 import com.google.firebase.database.Query;
 import com.google.firebase.database.ValueEventListener;
+import com.google.firebase.storage.FirebaseStorage;
+import com.google.firebase.storage.StorageReference;
+import com.google.firebase.storage.UploadTask;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+import com.squareup.picasso.Picasso;
 
 import java.lang.reflect.Type;
 import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.GregorianCalendar;
 
 public class CreateLobbyActivity extends AppCompatActivity
                 implements View.OnClickListener{
     private static final String GEO_FIRE_DB = "https://itproject-43222.firebaseio.com/";
     private static final String GEO_FIRE_REF = GEO_FIRE_DB + "/GeoFireData";
+    private static final int CAMERA_REQUEST_CODE = 1;
     private static String TAG = CreateLobbyActivity.class.getName();
+    private static int SECONDS_IN_MINUTE = 60;
+    private static int SECONDS_IN_HOUR = 3600;
     private static int MILLISECONDS_IN_MINUTE = 60000;
     private static double MAX_GAME_DURATION_MINS = 60;
     private static int MAX_TEAM_SIZE = 30;
@@ -52,7 +74,8 @@ public class CreateLobbyActivity extends AppCompatActivity
     private final String KEY_LOCATION_DATA = "location";
     private final String KEY_GAMESESSIONID_DATA = "gameSessionId";
     private final String KEY_GAMESESSION_DATA = "gameSession";
-
+    Uri uri;
+    StorageReference imagePath;
     //Firebase members
     private FirebaseAuth firebaseAuth;
     private FirebaseAuth.AuthStateListener authStateListener;
@@ -61,7 +84,7 @@ public class CreateLobbyActivity extends AppCompatActivity
     private FirebaseDatabase firebaseDatabase;
     private DataSnapshot snapshot;
     private FirebaseUser fbuser ;
-
+    private StorageReference storageReference;
     private User currentUserInfo;
     private String userId = null;
     private String userName;
@@ -69,11 +92,10 @@ public class CreateLobbyActivity extends AppCompatActivity
     private LatLng location;
     private String Address;
     private Boolean isPublic;
-    private String sessionImage;
+    private Uri sessionImage;
     private Long startTime;
-    private Long endTime;
-    private int durationInMinutes;
-    private Long durationInMillis;
+    private long durationInMinutes;
+    private long durationInSeconds;
     private Integer gameRadius;
     private Integer maxTeamSize;
     private String sessionName;
@@ -83,8 +105,12 @@ public class CreateLobbyActivity extends AppCompatActivity
     private int teamSeekBarMaxValue;
     private int durationSeekBarMaxValue;
     private int minSeekBar;
-    private double seekBarUnit;
+    private double durationSeekBarUnit;
+    private double teamSeekBarUnit;
     private boolean inEditMode;
+    private boolean timeSelected = false;
+    private Bundle locationAndAzimuthInputs = new Bundle();
+
 
     private EditText etSessionName;
     private TextView tvSelectedStartTime;
@@ -97,10 +123,14 @@ public class CreateLobbyActivity extends AppCompatActivity
     private RadioButton radiobuttonPrivateAccess;
     private Button btnCreateOrEdit;
     private Button btnDeleteOrCancel;
+    private Button btnSelectStartTime;
+    private ImageButton addImage;
+    private ImageView lobbyImage;
     private ListView  listView;
     private ArrayList list = new ArrayList();
     private ArrayAdapter adapter;
     private Handler handler;
+    private ProgressBar uploadProgressBar;
     private BroadcastReceiver currentLocationReciever;
     private LatLng currentLocation;
     private Gson gson = new Gson();
@@ -108,31 +138,63 @@ public class CreateLobbyActivity extends AppCompatActivity
     }.getType();
     private DatabaseReference GeoRef = FirebaseDatabase.getInstance().getReferenceFromUrl(GEO_FIRE_REF);
     private GeoFire geoFire = new GeoFire(GeoRef);
+    public static long getTomorrowMidnightInEpochTime(long timestamp) {
+        Calendar givenDate = Calendar.getInstance();
+        givenDate.setTimeInMillis(timestamp);
+        givenDate.set(Calendar.DAY_OF_YEAR, givenDate.get(Calendar.DAY_OF_YEAR) + 1);
+        givenDate.set(Calendar.HOUR_OF_DAY, 0);
+        givenDate.set(Calendar.MINUTE, 0);
+        givenDate.set(Calendar.SECOND, 0);
+        givenDate.set(Calendar.MILLISECOND, 0);
+        return givenDate.getTimeInMillis();
+    }
 
+    public static long getTodayMidnightInEpochTime(long timestamp) {
+        Calendar givenDate = Calendar.getInstance();
+        givenDate.setTimeInMillis(timestamp);
+        givenDate.set(Calendar.HOUR_OF_DAY, 0);
+        givenDate.set(Calendar.MINUTE, 0);
+        givenDate.set(Calendar.SECOND, 0);
+        givenDate.set(Calendar.MILLISECOND, 0);
+        return givenDate.getTimeInMillis();
+    }
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_create_lobby);
         Context context = getApplicationContext();
         receiveLocationBroadcasts();
-
-        etSessionName = (EditText) findViewById(R.id.etLobbyName);
-        tvSelectedStartTime = (TextView) findViewById(R.id.tvSelectedStartTime);
-        etDescription = (EditText) findViewById(R.id.etDescription);
-        listView = (ListView) findViewById(R.id.lvPlayerListView);
-        tvDurationMinutes = (TextView) findViewById(R.id.tvSelectedDuration);
-        tvMaxTeamSize = (TextView) findViewById(R.id.tvSelectedMaxSize);
-        btnCreateOrEdit = (Button)findViewById(R.id.btnCreateOrUpdateLobby);
-        btnDeleteOrCancel = (Button)findViewById(R.id.btnDeleteOrCancelLobby);
+        lobbyImage = findViewById(R.id.ivUploadImagePreview);
+        etSessionName = findViewById(R.id.etLobbyName);
+        tvSelectedStartTime = findViewById(R.id.tvSelectedStartTime);
+        etDescription = findViewById(R.id.etDescription);
+        listView = findViewById(R.id.lvPlayerListView);
+        tvDurationMinutes = findViewById(R.id.tvSelectedDuration);
+        tvMaxTeamSize = findViewById(R.id.tvSelectedMaxSize);
+        btnCreateOrEdit = findViewById(R.id.btnCreateOrUpdateLobby);
+        btnDeleteOrCancel = findViewById(R.id.btnDeleteOrCancelLobby);
+        btnSelectStartTime = findViewById(R.id.btnSelectStartTime);
+        addImage = findViewById(R.id.addImageButton);
         btnCreateOrEdit.setOnClickListener(this);
         btnDeleteOrCancel.setOnClickListener(this);
+        addImage.setOnClickListener(this);
         findViewById(R.id.btnSelectStartTime).setOnClickListener(this);
-        durationSeekBar = (SeekBar) findViewById(R.id.durationSlider);
-        maxTeamSizeSeekbar = (SeekBar) findViewById(R.id.teamSizeSlider);
-        radioButtonPublicAccess = (RadioButton) findViewById(R.id.btnPublic);
-        radiobuttonPrivateAccess = (RadioButton) findViewById(R.id.btnPrivate);
+        durationSeekBar = findViewById(R.id.durationSlider);
+        maxTeamSizeSeekbar = findViewById(R.id.teamSizeSlider);
+        radioButtonPublicAccess = findViewById(R.id.btnPublic);
+        radiobuttonPrivateAccess = findViewById(R.id.btnPrivate);
+        uploadProgressBar = findViewById(R.id.pbUploadProgress);
         durationSeekBarMaxValue = durationSeekBar.getMax();
         teamSeekBarMaxValue = maxTeamSizeSeekbar.getMax();
+
+        FirebaseApp.initializeApp(context);
+        firebaseAuth = FirebaseAuth.getInstance();
+        firebaseDatabase = FirebaseDatabase.getInstance();
+        userDbReference = firebaseDatabase.getReference("users");
+        gameSessionDbReference = firebaseDatabase.getReference("gameSessions");
+        storageReference = FirebaseStorage.getInstance().getReference();
+        fbuser = firebaseAuth.getCurrentUser();
+        userId = fbuser.getUid();
 
         //determine whether the user is editing or creating a new activity
         //fetch game SessionID if already created
@@ -145,45 +207,38 @@ public class CreateLobbyActivity extends AppCompatActivity
 
         } else {
             inEditMode = false;
+            gameSessionId = gameSessionDbReference.push().getKey();
         }
 
         //view controls to match the mode(edit / create)
+        teamSeekBarUnit = MAX_TEAM_SIZE / teamSeekBarMaxValue;
+        durationSeekBarUnit = (int) MAX_GAME_DURATION_MINS / durationSeekBarMaxValue;
         if (!inEditMode) {
             //setDefault values
             radioButtonPublicAccess.setChecked(true);
             isPublic = true;
             durationSeekBar.setProgress(durationSeekBarMaxValue / 2);
-            seekBarUnit = (int) MAX_GAME_DURATION_MINS / durationSeekBarMaxValue;
-            tvDurationMinutes.setText(String.valueOf(seekBarUnit * durationSeekBarMaxValue / 2));
-            durationInMillis = new Long((int) (seekBarUnit * durationSeekBarMaxValue / 2 * MILLISECONDS_IN_MINUTE));
-
+            tvDurationMinutes.setText(String.valueOf(durationSeekBarUnit * durationSeekBarMaxValue / 2));
+            durationInSeconds = (int) (durationSeekBarUnit * durationSeekBarMaxValue / 2 * SECONDS_IN_MINUTE);
+            durationInMinutes = durationInSeconds / SECONDS_IN_MINUTE;
             maxTeamSizeSeekbar.setProgress(teamSeekBarMaxValue / 2);
-            seekBarUnit = MAX_TEAM_SIZE / teamSeekBarMaxValue;
-            tvMaxTeamSize.setText(String.valueOf(seekBarUnit * teamSeekBarMaxValue / 2));
-            maxTeamSize = (int) seekBarUnit * teamSeekBarMaxValue / 2;
-            tvSelectedStartTime.setText("");
+            tvMaxTeamSize.setText(String.valueOf(teamSeekBarUnit * teamSeekBarMaxValue / 2));
+            maxTeamSize = (int) teamSeekBarUnit * teamSeekBarMaxValue / 2;
             btnCreateOrEdit.setText("Create");
             btnDeleteOrCancel.setText("Cancel");
-
         } else {
             btnCreateOrEdit.setText("Update");
             btnDeleteOrCancel.setText("Delete");
         }
         FirebaseApp.initializeApp(context);
-        firebaseAuth = FirebaseAuth.getInstance();
-        firebaseDatabase = FirebaseDatabase.getInstance();
-        userDbReference = firebaseDatabase.getReference("users");
-        gameSessionDbReference = firebaseDatabase.getReference("gameSessions");
-        fbuser = firebaseAuth.getCurrentUser();
-        userId = fbuser.getUid();
-
+        uploadProgressBar.setVisibility(View.GONE);
         //slider bar listeners
         durationSeekBar.setOnSeekBarChangeListener(new SeekBar.OnSeekBarChangeListener() {
             @Override
             public void onProgressChanged(SeekBar seekBar, int progressValue, boolean b) {
-                seekBarUnit = MAX_GAME_DURATION_MINS / durationSeekBarMaxValue;
-                durationInMinutes = (int)seekBarUnit*progressValue;
-                durationInMillis = new Long(durationInMinutes * MILLISECONDS_IN_MINUTE);
+                durationSeekBarUnit = MAX_GAME_DURATION_MINS / durationSeekBarMaxValue;
+                durationInMinutes = (long) (durationSeekBarUnit * progressValue);
+                durationInSeconds = durationInMinutes * SECONDS_IN_MINUTE;
                 tvDurationMinutes.setText(String.valueOf(durationInMinutes));
             }
             @Override
@@ -196,8 +251,8 @@ public class CreateLobbyActivity extends AppCompatActivity
         maxTeamSizeSeekbar.setOnSeekBarChangeListener(new SeekBar.OnSeekBarChangeListener() {
             @Override
             public void onProgressChanged(SeekBar seekBar, int progressValue, boolean b) {
-                seekBarUnit = MAX_TEAM_SIZE / teamSeekBarMaxValue;
-                maxTeamSize = (int)seekBarUnit*progressValue;
+                teamSeekBarUnit = MAX_TEAM_SIZE / teamSeekBarMaxValue;
+                maxTeamSize = (int) teamSeekBarUnit * progressValue;
                 tvMaxTeamSize.setText(String.valueOf(maxTeamSize));
             }
             @Override
@@ -207,7 +262,20 @@ public class CreateLobbyActivity extends AppCompatActivity
             public void onStopTrackingTouch(SeekBar seekBar) {
             }
         });
+        tvSelectedStartTime.addTextChangedListener(new TextWatcher() {
+            @Override
+            public void beforeTextChanged(CharSequence charSequence, int i, int i1, int i2) {
+            }
 
+            @Override
+            public void onTextChanged(CharSequence charSequence, int i, int i1, int i2) {
+            }
+
+            @Override
+            public void afterTextChanged(Editable editable) {
+                timeSelected = true;
+            }
+        });
         /**
          * get AuthListener to fetch logged in user
          * */
@@ -267,11 +335,12 @@ public class CreateLobbyActivity extends AppCompatActivity
             case R.id.btnCreateOrUpdateLobby:
                 if(currentUserInfo != null){
                     if (!gameStarted) {
-                        createNewLobby(currentUserInfo);
+                        if (checkFormFields()) {
+                            createNewLobby();
+                        }
                     } else {
-                        Toast.makeText(CreateLobbyActivity.this, "Can't Edit running Game", Toast.LENGTH_SHORT);
+                        Toast.makeText(CreateLobbyActivity.this, R.string.lobby_unable_to_edit_started, Toast.LENGTH_SHORT);
                     }
-
                 }
                 else{
                     Log.d(TAG, "User not authenticated");
@@ -282,14 +351,14 @@ public class CreateLobbyActivity extends AppCompatActivity
                     if (inEditMode) {
                         if (!gameStarted) {
                             deleteServerGameSessionObj(gameSession);
+                            deleteSessionImage();
                         } else {
-                            Toast.makeText(CreateLobbyActivity.this, "Can't delete running Game", Toast.LENGTH_SHORT);
+                            Toast.makeText(CreateLobbyActivity.this, R.string.lobby_unable_to_delete_started, Toast.LENGTH_SHORT);
                         }
-
                     } else {
+                        deleteSessionImage();
                         finish();
                     }
-
                 }
                 else{
                     Log.d(TAG, "User not authenticated");
@@ -299,9 +368,14 @@ public class CreateLobbyActivity extends AppCompatActivity
                 DialogFragment dialogFragment = new SessionTimePicker();
                 dialogFragment.show(getFragmentManager(), "TimePicker");
                 break;
+            case R.id.addImageButton:
+                Intent intent = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+                startActivityForResult(intent, CAMERA_REQUEST_CODE);
+                break;
 
         }
     }
+
     public void onRadioButtonClicked(View view){
         boolean checked = ((RadioButton) view).isChecked();
 
@@ -329,6 +403,25 @@ public class CreateLobbyActivity extends AppCompatActivity
             firebaseAuth.removeAuthStateListener(authStateListener);
         }
     }
+
+    @Override
+    protected void onActivityResult(int requestCode, int resultCode, Intent data) {
+        super.onActivityResult(requestCode, resultCode, data);
+        if (requestCode == CAMERA_REQUEST_CODE && resultCode == RESULT_OK) {
+            //valid image capture
+            uri = data.getData();
+            uploadImage(uri);
+
+        }
+    }
+
+    @Override
+    public void onBackPressed() {
+        super.onBackPressed();
+        uploadProgressBar.setVisibility(View.GONE);
+        getWindow().clearFlags(WindowManager.LayoutParams.FLAG_NOT_TOUCHABLE);
+    }
+
     /***
      * updates a game session information for a specific value from local device to server
      * */
@@ -347,7 +440,6 @@ public class CreateLobbyActivity extends AppCompatActivity
                 }
                 else{
                     //create new value game does not exist
-                    gameSessionId = gameSessionDbReference.push().getKey();
                     gameSession.setSessionId(gameSessionId);
                     Log.d(TAG, " Successfully Updated Game Session");
                     gameSessionDbReference.child(gameSessionId).setValue(gameSession);
@@ -362,6 +454,7 @@ public class CreateLobbyActivity extends AppCompatActivity
             }
         });
     }
+
     /**
      * Delete GameSession object if it has been created on the server
      * */
@@ -394,6 +487,13 @@ public class CreateLobbyActivity extends AppCompatActivity
         });
     }
 
+    private void deleteSessionImage() {
+        if (uri != null) {
+            imagePath = storageReference.child("gameSessionPhotos").child(gameSessionId);
+            imagePath.delete();
+        }
+    }
+
     /**
      * Fetch game sesion object if it already exists on the server
      * */
@@ -423,38 +523,115 @@ public class CreateLobbyActivity extends AppCompatActivity
             }
         });
     }
+
+    private void uploadImage(Uri uri) {
+        if (uri != null) {
+            AlertDialog.Builder builder = new AlertDialog.Builder(this);
+            builder.setMessage("Uploading Image")
+                    .setCancelable(false)
+                    .setPositiveButton("OK", new DialogInterface.OnClickListener() {
+                        public void onClick(DialogInterface dialog, int id) {
+                        }
+                    });
+            AlertDialog alert = builder.create();
+            alert.show();
+
+            uploadProgressBar.setVisibility(View.VISIBLE);
+            getWindow().setFlags(WindowManager.LayoutParams.FLAG_NOT_TOUCHABLE,
+                    WindowManager.LayoutParams.FLAG_NOT_TOUCHABLE);
+            imagePath = storageReference.child("gameSessionPhotos").child(gameSessionId);
+            imagePath.putFile(uri).addOnSuccessListener(new OnSuccessListener<UploadTask.TaskSnapshot>() {
+                @Override
+                public void onSuccess(UploadTask.TaskSnapshot taskSnapshot) {
+                    sessionImage = taskSnapshot.getDownloadUrl();
+                    Picasso.with(CreateLobbyActivity.this).load(sessionImage).resize(60, 60).centerCrop().into(lobbyImage);
+                    uploadProgressBar.setVisibility(View.GONE);
+                    getWindow().clearFlags(WindowManager.LayoutParams.FLAG_NOT_TOUCHABLE);
+                    Toast.makeText(CreateLobbyActivity.this, R.string.success_adding_image, Toast.LENGTH_SHORT).show();
+
+                }
+            }).addOnFailureListener(new OnFailureListener() {
+                @Override
+                public void onFailure(@NonNull Exception e) {
+                    uploadProgressBar.setVisibility(View.GONE);
+                    getWindow().clearFlags(WindowManager.LayoutParams.FLAG_NOT_TOUCHABLE);
+                    Toast.makeText(CreateLobbyActivity.this, R.string.error_adding_image, Toast.LENGTH_SHORT).show();
+                }
+            });
+        }
+    }
+
     /**
      * launches a new lobby for other individuals to view andjoin
      * */
-    private boolean createNewLobby(User userId){
+    private boolean createNewLobby() {
         //create new lobby on server with creator on team 1
         //gameSession = new DataGenerator().generateRandomGameSession(new LatLng(-35.325,144.34234));
-        gameSession = createMyNewGameSession(currentUserInfo);
-        loadDataFromForm();
+        gameSession = createNewGameSession(currentUserInfo);
         //notify individuals on invite list
         if(getAddressList() != null){
             inviteSelectedMembers(getAddressList());
         }
+        Log.d(TAG, "creating new Lobby");
         //launch gamesession on server
+        loadDataFromForm();
         updateServerGameSession(gameSession);
         return false;
     }
 
-    /**
-     * updates data on the server if the lobby creator has altered the EditText fields
-     * */
-    private boolean updateLobbyInformation(){
-        //if lobby exists update the lobby that matches current lobby id
-        updateServerGameSession(gameSession);
-        return false;
-    }
-    /***
-     *
-     * updates the listview containing the members to invite
-     */
-    private boolean updateLobbyInvites(){
-        //add invite to listview
-        return false;
+    private boolean checkFormFields() {
+        String name, description, startTime;
+        name = etSessionName.getText().toString();
+        description = etDescription.getText().toString();
+
+        if (name.isEmpty()) {
+            etSessionName.setError("Name required");
+            return false;
+        }
+        if (description.isEmpty()) {
+            etDescription.setError("Description required");
+            return false;
+        }
+        if (timeSelected == false) {
+            btnSelectStartTime.setError("Start time required");
+            AlertDialog.Builder builder = new AlertDialog.Builder(this);
+            builder.setMessage("Start time is required")
+                    .setCancelable(false)
+                    .setPositiveButton("OK", new DialogInterface.OnClickListener() {
+                        public void onClick(DialogInterface dialog, int id) {
+                        }
+                    });
+            AlertDialog alert = builder.create();
+            alert.show();
+            return false;
+        }
+        if (durationInMinutes == 0) {
+            AlertDialog.Builder builder = new AlertDialog.Builder(this);
+            builder.setMessage("Duration cannot be set to zero minutes")
+                    .setCancelable(false)
+                    .setPositiveButton("OK", new DialogInterface.OnClickListener() {
+                        public void onClick(DialogInterface dialog, int id) {
+                        }
+                    });
+            AlertDialog alert = builder.create();
+            alert.show();
+            return false;
+        }
+        if (maxTeamSize == 0) {
+            AlertDialog.Builder builder = new AlertDialog.Builder(this);
+            builder.setMessage("Team size cannot be set to zero members")
+                    .setCancelable(false)
+                    .setPositiveButton("OK", new DialogInterface.OnClickListener() {
+                        public void onClick(DialogInterface dialog, int id) {
+                        }
+                    });
+            AlertDialog alert = builder.create();
+            alert.show();
+            return false;
+        }
+
+        Log.d(TAG, "all conditions in form met");
+        return true;
     }
 
     /**
@@ -462,11 +639,14 @@ public class CreateLobbyActivity extends AppCompatActivity
      */
     public void loadDataToForm(GameSession gameSession){
         etSessionName.setText(gameSession.getSessionName());
-        //durationSeekBar.setProgress(gameSession.getDuration().intValue()/durationSeekBar.getMax());
-        //maxTeamSizeSeekbar.setProgress();
-        //tvSelectedStartTime.setText();
+        durationSeekBar.setProgress((int) (gameSession.getDuration().intValue() / (durationSeekBarUnit * SECONDS_IN_MINUTE)));
+        maxTeamSizeSeekbar.setProgress((int) (gameSession.getMaxPlayers() / (2 * teamSeekBarUnit)));
+        tvSelectedStartTime.setText(gameSession.getStartTimeString());
+        if (gameSession.getSessionImageUri() != null) {
+            Uri uri = Uri.parse(gameSession.getSessionImageUri());
+            Picasso.with(CreateLobbyActivity.this).load(uri).resize(60, 60).centerCrop().into(lobbyImage);
+        }
         etDescription.setText(gameSession.getDescription());
-
         if(gameSession.getPublicAccess() == true){
             radioButtonPublicAccess.setChecked(true);
         }
@@ -474,27 +654,40 @@ public class CreateLobbyActivity extends AppCompatActivity
             radiobuttonPrivateAccess.setChecked(true);
         }
     }
-
     /***
      * updates information from entered fields
      */
     public void loadDataFromForm(){
         gameSession.setSessionName(etSessionName.getText().toString());
-        //gamesession.setSessionUri();
         //startTime = Long.parseLong(tvSelectedStartTime.getText().toString());
-        //gameSession.get = Long.parseLong(etStartTime.getText().toString()) + durationInMillis.longValue();
-        //gameSession.setGameRadius(new Integer(MAX_GAME_RADIUS));
+        gameSession.setDuration(new Long(durationInSeconds));
+        gameSession.setGameRadius(new Integer(MAX_GAME_RADIUS));
         gameSession.setMaxPlayers(new Integer(maxTeamSize * 2));
         gameSession.setPublicAccess(isPublic);
         gameSession.setDescription(etDescription.getText().toString());
-        gameSession.setStartTime(new Long(2334324));
-        for (Team team : gameSession.getTeamArrayList()) {
-            team.setMaxPlayers(maxTeamSize);
+        gameSession.setStartTimeString(tvSelectedStartTime.getText().toString());
+        String[] time = tvSelectedStartTime.getText().toString().replaceAll(" ", "").split(":");
+        int selectedHour = Integer.valueOf(time[0]);
+        int selectedMinute = Integer.valueOf(time[1]);
+        Date date = new Date();
+        Calendar calendar = GregorianCalendar.getInstance();
+        calendar.setTime(date);
+        int currentHour = calendar.get(Calendar.HOUR_OF_DAY);
+        if (currentHour > selectedHour) {
+            //assume selected time on next day get tomorrow epoch time
+            startTime = getTomorrowMidnightInEpochTime(System.currentTimeMillis())
+                    + selectedHour * SECONDS_IN_HOUR + selectedMinute + SECONDS_IN_MINUTE;
+            gameSession.setStartTime(startTime);
+        } else {
+            //time is today
+            startTime = getTodayMidnightInEpochTime(System.currentTimeMillis())
+                    + selectedHour * SECONDS_IN_HOUR + selectedMinute + SECONDS_IN_MINUTE;
+            gameSession.setStartTime(startTime);
         }
-        gameSession.setDuration(new Long(2334324));
+        if (sessionImage != null) {
+            gameSession.setSessionImageUri(sessionImage.toString());
+        }
         gameSession.setEndTime(new Long(gameSession.getStartTime().longValue() + gameSession.getDuration().longValue()));
-        gameSession.setGameRadius(gameRadius);
-
         if(currentLocation != null){
 
             //Currently storing utilising the creators userID, should be fine, users shouldnt create more than 1 session anyway
@@ -517,52 +710,58 @@ public class CreateLobbyActivity extends AppCompatActivity
         startActivity(sessionInformation);
     }
 
-    /*
-    * allows for faster invites of players for private sessions
-    *
-    */
-    private ArrayList<String> getAddressList(){
-        return null;
-    }
-    /*
-    * notifies selected  memebers on the address list
-    * */
-    private boolean inviteSelectedMembers(ArrayList<String> addressList){
-        return false;
-    }
     /**
      *manipulates layout elements to provide user with feedback about successful informaiton update
      */
     private void displaySuccessfulUpdate(){
-        Toast.makeText(this,"Successful update",Toast.LENGTH_LONG).show();
+        Toast.makeText(this, R.string.successful_game_created, Toast.LENGTH_SHORT).show();
     }
+
     /***
      * Generates a new gamesession based on form information
      * */
-    private GameSession createMyNewGameSession(User user){
+    private GameSession createNewGameSession(User user) {
         gameSession = new GameSession();
+        gameSession.setSessionId(gameSessionId);
         gameSession.setGameStarted(false);
         gameSession.setGameCompleted(false);
         Player creator = new Player(user.getEmail());
         gameSession.setCreator(creator.getDisplayName());
         gameSession.add2Teams(gameSession.getSessionId(),creator);
-        loadDataFromForm();
-        Gson gson = new Gson();
-        DataGenerator dataGenerator = new DataGenerator();
-        Type gameSessionType = new TypeToken<GameSession>() {
-        }.getType();
-        Log.d(TAG, gson.toJson(gameSession));
         return gameSession;
     }
+    /*
+* allows for faster invites of players for private sessions
+*
+*/
+    private ArrayList<String> getAddressList() {
+        return null;
+    }
 
+    /*
+    * notifies selected  memebers on the address list
+    * */
+    private boolean inviteSelectedMembers(ArrayList<String> addressList) {
+        return false;
+    }
+
+    /***
+     *
+     * updates the listview containing the members to invite
+     */
+    private boolean updateLobbyInvites() {
+        //add invite to listview
+        return false;
+    }
     private void receiveLocationBroadcasts() {
         if (currentLocationReciever == null) {
             currentLocationReciever = new BroadcastReceiver() {
                 @Override
                 public void onReceive(Context context, Intent intent) {
-                    String input = intent.getStringExtra(KEY_LOCATION_DATA);
+                    locationAndAzimuthInputs = intent.getExtras();
+                    String locationExtra = locationAndAzimuthInputs.getString(KEY_LOCATION_DATA);
                     Log.d(TAG, "Recieving Broadcast");
-                    Location recentLocation = gson.fromJson(input, locationType);
+                    Location recentLocation = gson.fromJson(locationExtra, locationType);
                     if (recentLocation != null) {
                         LatLng absLocation = new LatLng(recentLocation.getLatitude(), recentLocation.getLongitude(), recentLocation.getAccuracy());
                         currentLocation = absLocation;
